* Makefile.in (LIBCPP_OBJS): Take out version.o. 	* cpphash.h (cpp_reader): Take out print_version member. 	* cppinit.c: (cpp_handle_option): Don't do anything with 	-version.  Just set help_only for --version, --target-help. 	Just set verbose option for -v. 	(cpp_post_options): Don't print a version string.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54390 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2072,7 +2072,7 @@ PREPROCESSOR_DEFINES = \
 
 LIBCPP_OBJS =	cpplib.o cpplex.o cppmacro.o cppexp.o cppfiles.o cpptrad.o \
 		cpphash.o cpperror.o cppinit.o cppdefault.o cppmain.o \
-		hashtable.o line-map.o mkdeps.o prefix.o version.o mbchar.o
+		hashtable.o line-map.o mkdeps.o prefix.o mbchar.o
 
 LIBCPP_DEPS =	$(CPPLIB_H) cpphash.h line-map.h hashtable.h intl.h \
 		$(OBSTACK_H) $(SYSTEM_H)
