--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2169,8 +2169,7 @@ if test x"${enable_languages+set}" != xset; then
 		enable_languages=all
 	fi
 else
-	if test x"${enable_languages}" = x ||
-	   test x"${enable_languages}" = xyes;
+	if test x"${enable_languages}" = x;
 	then
 		AC_MSG_ERROR([--enable-languages needs at least one language argument])
 	fi
@@ -2210,6 +2209,7 @@ changequote([,])dnl
    esac
 done
 
+remaining_languages=${enable_languages}
 subdirs=
 for lang in ${srcdir}/*/config-lang.in ..
 do
@@ -2235,6 +2235,7 @@ changequote(,)dnl
 	  *) add_this_lang=no ;;
 	  esac
 	  if test x"${add_this_lang}" = xyes; then
+                remaining_languages=`echo $remaining_languages | sed -e s/${lang_alias}//g`
 		case $lang in
 		    ${srcdir}/ada/config-lang.in)
 			if test x$have_gnat = xyes ; then
@@ -2250,6 +2251,14 @@ changequote(,)dnl
 changequote([,])dnl
 	esac
 done
+
+remaining_languages_check=`echo $remaining_languages | sed -e 's/,//g' -e 's/^c$//'g`
+if test "xxx$remaining_languages_check" != "xxx" -a "xxx$remaining_languages_check" != "xxxall" ; then
+    remaining_languages_clean=`echo $remaining_languages | sed -e 's/^c,//' -e 's/,c,/,/' -e 's/,c$//'  -e 's/^c$//' -e 's/,,*/,/g' -e 's/^,//g' -e 's/,$//g' `
+    echo "Language alias(es) not found: $remaining_languages_clean" 
+    echo "Refer to the configure instructions in the doc directory"
+    exit 1
+fi
 
 # Make gthr-default.h if we have a thread file.
 gthread_flags=
