configure.in (target_alias): Fix.
2002-06-14  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.in (target_alias): Fix.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.

From-SVN: r54620

--- a/libstdc++-v3/configure.in
+++ b/libstdc++-v3/configure.in
@@ -158,7 +158,9 @@ if test -n "$with_cross_host" || test x"$build" != x"$host"; then
       GLIBCPP_CHECK_WCHAR_T_SUPPORT
       os_include_dir="config/os/mingw32"
       ;;
+changequote(,)dnl
     *-qnx6.[12]*)
+changequote([,])dnl
       SECTION_FLAGS='-ffunction-sections -fdata-sections'
       AC_SUBST(SECTION_FLAGS) 
       GLIBCPP_CHECK_LINKER_FEATURES
