--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -298,17 +298,19 @@ static GTY(()) tree declspec_stack;
 
 /* For __extension__, save/restore the warning flags which are
    controlled by __extension__.  */
-#define SAVE_WARN_FLAGS()			\
+#define SAVE_EXT_FLAGS()			\
 	size_int (pedantic			\
 		  | (warn_pointer_arith << 1)	\
-		  | (warn_traditional << 2))
+		  | (warn_traditional << 2)	\
+		  | (flag_iso << 3))
 
-#define RESTORE_WARN_FLAGS(tval)		\
+#define RESTORE_EXT_FLAGS(tval)			\
   do {						\
     int val = tree_low_cst (tval, 0);		\
     pedantic = val & 1;				\
     warn_pointer_arith = (val >> 1) & 1;	\
     warn_traditional = (val >> 2) & 1;		\
+    flag_iso = (val >> 3) & 1;			\
   } while (0)
 
 ifobjc
@@ -394,7 +396,7 @@ end ifobjc
 		  else
 		    error ("argument of `asm' is not a constant string"); }
 	| extension extdef
-		{ RESTORE_WARN_FLAGS ($1); }
+		{ RESTORE_EXT_FLAGS ($1); }
 	;
 
 datadef:
@@ -517,7 +519,7 @@ unary_expr:
 	/* __extension__ turns off -pedantic for following primary.  */
 	| extension cast_expr	  %prec UNARY
 		{ $$ = $2;
-		  RESTORE_WARN_FLAGS ($1); }
+		  RESTORE_EXT_FLAGS ($1); }
 	| unop cast_expr  %prec UNARY
 		{ $$ = build_unary_op ($1, $2, 0);
 		  overflow_warning ($$); }
@@ -865,7 +867,7 @@ decl:
 	| declspecs ';'
 		{ shadow_tag ($1); }
 	| extension decl
-		{ RESTORE_WARN_FLAGS ($1); }
+		{ RESTORE_EXT_FLAGS ($1); }
 	;
 
 /* A list of declaration specifiers.  These are:
@@ -1863,7 +1865,7 @@ component_decl:
 		{ $$ = NULL_TREE; }
 	| extension component_decl
 		{ $$ = $2;
-		  RESTORE_WARN_FLAGS ($1); }
+		  RESTORE_EXT_FLAGS ($1); }
 	;
 
 components:
@@ -2664,10 +2666,11 @@ identifiers_or_typenames:
 
 extension:
 	EXTENSION
-		{ $$ = SAVE_WARN_FLAGS();
+		{ $$ = SAVE_EXT_FLAGS();
 		  pedantic = 0;
 		  warn_pointer_arith = 0;
-		  warn_traditional = 0; }
+		  warn_traditional = 0;
+		  flag_iso = 0; }
 	;
 
 ifobjc
