* gcj/javaprims.h: Updated class declaration list. 	* Makefile.in: Rebuilt. 	* Makefile.am (core_java_source_files): Added new file. 	* java/util/EventListenerProxy.java: New file. 	* java/util/EventListener.java: Re-merge with Classpath. 	* java/util/EventObject.java: Re-merge with Classpath.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54720 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -1198,6 +1198,7 @@ java/util/Dictionary.java \
 java/util/EmptyStackException.java \
 java/util/Enumeration.java \
 java/util/EventListener.java \
+java/util/EventListenerProxy.java \
 java/util/EventObject.java \
 java/util/GregorianCalendar.java \
 java/util/HashMap.java \
