--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -987,6 +987,7 @@ java/util/Observable.java \
 java/util/Observer.java	\
 java/util/Properties.java \
 java/util/PropertyPermission.java \
+java/util/PropertyPermissionCollection.java \
 java/util/PropertyResourceBundle.java \
 java/util/Random.java \
 java/util/RandomAccess.java \
@@ -2550,6 +2551,7 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/java/util/NoSuchElementException.P .deps/java/util/Observable.P \
 .deps/java/util/Observer.P .deps/java/util/Properties.P \
 .deps/java/util/PropertyPermission.P \
+.deps/java/util/PropertyPermissionCollection.P \
 .deps/java/util/PropertyResourceBundle.P .deps/java/util/Random.P \
 .deps/java/util/RandomAccess.P .deps/java/util/ResourceBundle.P \
 .deps/java/util/Set.P .deps/java/util/SimpleTimeZone.P \
