* Makefile.in (QMTEST_DIR): Simplify definition.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54783 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -3136,7 +3136,7 @@ QMTEST_GPP_TESTS=gpp
 # The subdirectory of the OBJDIR that will be used to store the QMTest
 # test database configuration and that will be used for temporary
 # scratch space during QMTest's execution.
-QMTEST_DIR=${objdir}/qmtestsuite
+QMTEST_DIR=qmtestsuite
 
 # Create the QMTest database configuration.
 ${QMTEST_DIR} stamp-qmtest:
