--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2181,7 +2181,8 @@ if test x"${enable_languages+set}" != xset; then
 		enable_languages=all
 	fi
 else
-	if test x"${enable_languages}" = x;
+	if test x"${enable_languages}" = x \
+        || test x"${enable_languages}" = xyes;
 	then
 		AC_MSG_ERROR([--enable-languages needs at least one language argument])
 	fi
@@ -2221,7 +2222,8 @@ changequote([,])dnl
    esac
 done
 
-remaining_languages=${enable_languages}
+expected_languages=`echo ,${enable_languages}, | sed -e 's:,: :g' -e 's:  *: :g' -e 's:  *: :g' -e 's:^ ::' -e 's: $::'`
+found_languages=
 subdirs=
 for lang in ${srcdir}/*/config-lang.in ..
 do
@@ -2246,8 +2248,8 @@ changequote(,)dnl
 	  *,all,*) add_this_lang=yes ;;
 	  *) add_this_lang=no ;;
 	  esac
+          found_languages="${found_languages} ${lang_alias}"
 	  if test x"${add_this_lang}" = xyes; then
-                remaining_languages=`echo $remaining_languages | sed -e s/${lang_alias}//g`
 		case $lang in
 		    ${srcdir}/ada/config-lang.in)
 			if test x$have_gnat = xyes ; then
@@ -2264,12 +2266,33 @@ changequote([,])dnl
 	esac
 done
 
-remaining_languages_check=`echo $remaining_languages | sed -e 's/,//g' -e 's/^c$//'g`
-if test "xxx$remaining_languages_check" != "xxx" -a "xxx$remaining_languages_check" != "xxxall" ; then
-    remaining_languages_clean=`echo $remaining_languages | sed -e 's/^c,//' -e 's/,c,/,/' -e 's/,c$//'  -e 's/^c$//' -e 's/,,*/,/g' -e 's/^,//g' -e 's/,$//g' `
-    echo "Language alias(es) not found: $remaining_languages_clean" 
-    echo "Refer to the configure instructions in the doc directory"
-    exit 1
+missing_languages=
+for expected_language in ${expected_languages} ..
+do 
+    if test "${expected_language}" != ..; then
+        missing_language="${expected_language}"
+        if test "${expected_language}" = "c" \
+           || test "${expected_language}" = "all"; then
+                missing_language=
+        fi
+        for found_language in ${found_languages} ..
+        do 
+            if test "${found_language}" != ..; then
+                if test "${expected_language}" = "${found_language}"; then
+                    missing_language=
+                fi
+            fi
+        done
+        if test "x${missing_language}" != x; then
+           missing_languages="${missing_languages} ${missing_language}"
+        fi
+    fi
+done
+
+if test "x$missing_languages" != x; then
+  AC_MSG_ERROR([
+The following requested languages were not found:${missing_languages}
+The following languages were available: c${found_languages}])
 fi
 
 # Make gthr-default.h if we have a thread file.
