2002-06-24  David S. Miller  <davem@redhat.com>
	* Makefile.in (GTFILES): Add basic-block.h
	* basic-block.h (label_value_list, tail_recursion_label_list):
	Mark with GTY.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54964 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1813,6 +1813,7 @@ GTFILES = $(GCONFIG_H) \
   $(srcdir)/tree.h $(srcdir)/libfuncs.h $(srcdir)/hashtable.h $(srcdir)/real.h \
   $(srcdir)/varray.h $(srcdir)/ssa.h $(srcdir)/insn-addr.h $(srcdir)/cselib.h \
   $(srcdir)/c-common.h $(srcdir)/c-tree.h \
+  $(srcdir)/basic-block.h \
   $(srcdir)/alias.c $(srcdir)/bitmap.c $(srcdir)/cselib.c \
   $(srcdir)/dependence.c $(srcdir)/dwarf2out.c $(srcdir)/emit-rtl.c \
   $(srcdir)/except.c $(srcdir)/explow.c $(srcdir)/expr.c \
