gcc: 	* Makefile.in (SHELL): Set to @SHELL@. 	* fixinc/Makefile.in (SHELL): Likewise.
gcc/ada:
	* Makefile.in (SHELL): Set to @SHELL@.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54976 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -112,7 +112,7 @@ AR = ar
 AR_FLAGS = rc
 DLLTOOL = dlltool
 RANLIB = @RANLIB@
-SHELL = /bin/sh
+SHELL = @SHELL@
 # pwd command to use.  Allow user to override default by setting PWDCMD in
 # the environment to account for automounters.  The make variable must not
 # be called PWDCMD, otherwise the value set here is passed to make
