--- a/Makefile.in
+++ b/Makefile.in
@@ -524,7 +524,6 @@ CONFIGURE_BUILD_MODULES = \
 # This is a list of the targets for all of the modules which are compiled
 # using $(FLAGS_TO_PASS).
 ALL_MODULES = \
-	all-apache \
 	all-ash \
 	all-autoconf \
 	all-automake \
@@ -534,7 +533,6 @@ ALL_MODULES = \
 	all-bison \
 	all-byacc \
 	all-bzip2 \
-	all-cgen \
 	all-cvssrc \
 	all-db \
 	all-dejagnu \
@@ -607,7 +605,6 @@ NATIVE_CHECK_MODULES = \
 	check-zip
 
 CROSS_CHECK_MODULES = \
-	check-apache \
 	check-ash \
 	check-autoconf \
 	check-automake \
@@ -615,7 +612,6 @@ CROSS_CHECK_MODULES = \
 	check-bfd \
 	check-binutils \
 	check-bzip2 \
-	check-cgen \
 	check-cvssrc \
 	check-db \
 	check-dejagnu \
@@ -677,7 +673,6 @@ CHECK_MODULES=$(NATIVE_CHECK_MODULES) $(CROSS_CHECK_MODULES)
 # We put install-tcl before install-itcl because itcl wants to run a
 # program on installation which uses the Tcl libraries.
 INSTALL_MODULES = \
-	install-apache \
 	install-ash \
 	install-autoconf \
 	install-automake \
@@ -688,7 +683,6 @@ INSTALL_MODULES = \
 	install-binutils \
 	install-bison \
 	install-byacc \
-	install-cgen \
 	install-cvssrc \
 	install-db \
 	install-dejagnu \
@@ -853,7 +847,6 @@ INSTALL_TARGET_MODULES = \
 
 # This is a list of the targets for which we can do a clean-{target}.
 CLEAN_MODULES = \
-	clean-apache \
 	clean-ash \
 	clean-autoconf \
 	clean-automake \
@@ -863,7 +856,6 @@ CLEAN_MODULES = \
 	clean-bison \
 	clean-byacc \
 	clean-bzip2 \
-	clean-cgen \
 	clean-cvssrc \
 	clean-db \
 	clean-dejagnu \
@@ -1692,7 +1684,6 @@ ALL_GCC_C = $(ALL_GCC) all-target-newlib all-target-libgloss
 ALL_GCC_CXX = $(ALL_GCC_C) all-target-libstdc++-v3
 
 # This is a list of inter-dependencies among modules.
-all-apache:
 all-ash:
 all-autoconf: all-m4 all-texinfo
 all-automake: all-m4 all-texinfo
@@ -1706,7 +1697,6 @@ configure-target-bsp: $(ALL_GCC_C)
 all-target-bsp: configure-target-bsp
 all-byacc:
 all-bzip2:
-all-cgen: all-libiberty
 all-cvssrc:
 configure-target-cygmon: $(ALL_GCC_C)
 all-target-cygmon: configure-target-cygmon all-target-libiberty all-target-libstub all-target-bsp
@@ -1770,7 +1760,7 @@ configure-target-newlib: $(ALL_GCC)
 all-target-newlib: configure-target-newlib
 configure-target-libtermcap: $(ALL_GCC_C)
 all-target-libtermcap: configure-target-libtermcap
-all-opcodes: all-bfd all-libiberty all-cgen
+all-opcodes: all-bfd all-libiberty
 all-patch: all-libiberty
 all-perl:
 all-prms: all-libiberty
@@ -1783,7 +1773,7 @@ all-sed: all-libiberty
 all-send-pr: all-prms
 all-shellutils:
 all-sid: all-tcl all-tk
-all-sim: all-libiberty all-bfd all-opcodes all-readline all-cgen
+all-sim: all-libiberty all-bfd all-opcodes all-readline
 all-snavigator: all-tcl all-tk all-itcl all-tix all-db all-grep all-libgui
 all-tar: all-libiberty
 all-tcl:
